# atcoder

./: .editorconfig  .gitignore  Makefile  README.md  shell.nix
.SpaceVim.d/: tasks.toml
.SpaceVim.d/snippets/: python.snip
.SpaceVim.d/tasks_sh/: test_cmd.sh
.devcontainer/: Dockerfile
abc146/B/: main.go
abc146/Q1/: main.go
abc159/: contest.acc.json
abc159/a/: main.jl
abc159/b/: main.jl
abc159/c/: main.jl
abc159/f/: main.jl
abc161/: contest.acc.json
abc161/a/: main.pl
abc161/b/: main.pl
abc161/c/: main.pl
abc162/: contest.acc.json
abc162/a/: main.pl
abc162/b/: main.go  main.pl
abc162/c/: main.pl
abc162/d/: main.pl
abc163/: contest.acc.json
abc163/a/: main.go
abc163/b/: main.go
abc163/c/: main.go
abc164/: contest.acc.json
abc164/c/: Cargo.toml  main.pl
abc164/c/src/: main.rs
abc165/: Cargo.toml
abc166/: Cargo.toml
abc167/: Cargo.toml
abc168/: Cargo.toml
abc169/: Cargo.toml
abc170/: Cargo.toml
abc171/: Cargo.toml  c.py
abc172/: Cargo.toml  a.jl  b.jl  c.jl
abc173/: a.jl  b.jl
abc174/: a.jl  b.jl  c.jl
abc175/: a.jl
abc176/: a.jl  b.jl  c.jl
abc177/: contest.acc.json
abc177/a/: main.jl
abc177/b/: main.jl
abc177/c/: main.jl
abc177/e/: main.jl
abc178/: contest.acc.json
abc179/: contest.acc.json
abc181/: build.gradle.kts  settings.gradle.kts
abc182/: build.gradle.kts  settings.gradle.kts
abc183/: settings.gradle.kts
abc186/: Cargo.toml
abc187/: Cargo.toml
abc188/: Cargo.toml
kotlin/: build.gradle.kts
nomura2020/: Cargo.toml
panasonic2020/: contest.acc.json
(+57 files in other folders)
